2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Handle some events.

	* src/ftsdf.c (event_font_update, event_color_change, event_help):
	New functions.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] New demo program to view SDF glyphs.

	* src/ftsdf.c: New file, with first templates.

2020-12-01  Priyesh Kumar  <priyeshkkumar@gmail.com>

	Synchronize with recent FreeType changes.

	* Makefile (FT_INCLUDES): Add `$(TOP_DIR)/src/dlg` to include 'dlg'
	header files.
	(LINK_LIBS): Add `-lpthread'.

2020-11-18  Werner Lemberg  <wl@gnu.org>

	[ftmulti]: Keys 'i' and 'I' now control the axis increment.

	* src/ftmulti.c (increment): New global variable.
	(Help): Updated.
	(Process_Event): Handle 'i' and 'I' keys.
	Update related code.
	(main): Show axis increment in header.

2020-11-18  Werner Lemberg  <wl@gnu.org>

	* src/ftmulti.c (main): Fix header re-display.

	The `header` string buffer must always be reset.

2020-11-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Draw_Header): Always show encoding.

2020-11-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Get_Info): Improve formatting.

2020-11-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Add engine management.

	* src/ftview.c (Process_Event): Use `FTDemo_Hinting_Engine_Change'.
	(event_help): Document 'H'.

2020-11-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Simplify engine management.

	* src/ftview.c (Process_Event): Use `FTDemo_Hinting_Engine_Change'.
	(main): Remove engine accounting.

2020-11-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Simplify engine management.

	* src/ftview.c (Process_Event): Use `FTDemo_Hinting_Engine_Change'.
	(write_header): Do not report engine and reformat to make more room.
	(main): Remove engine accounting.

2020-11-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Universal hinting engine switch.
